tests/negative/NestedAsPatterns.juvix
module NestedAsPatterns;

f : Type -> Type;
f a@b@_ := a;

end;
